--- a/TeaCozy/resources/css/styles.css
+++ b/TeaCozy/resources/css/styles.css
@@ -5,10 +5,12 @@
 body {
   font-family: Helvetica, sans-serif;
   font-size: 22px;
-  color: rgb(255, 106, 0);
+  color: seashell;
   background-color: black;
   opacity: 0.9;
 }
+
+/* Header */
 
 header {
   display: flex;
@@ -19,4 +21,111 @@ header {
   background-color: black;
   z-index: 1;
   top: 0;
+}
+
+.logo {
+  height: 50px;
+  margin-left: 10px;
+  align-self: center;
+}
+
+/* Navigation */
+
+nav {
+  width: 100%;
+}
+
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+nav li {
+  list-style: none;
+  text-decoration: underline;
+  margin: 0 20px;
+}
+
+/* Hero */
+
+.mission {
+  background-image: url("/resources/img-mission-background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 700px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.mission-text {
+  background-color: black;
+  width: 100%;
+  text-align: center;
+}
+
+/* Images */
+
+.main {
+  max-width: 100%;
+  text-align: center;
+}
+
+.tea {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tea img {
+  width: 300px;
+  height: 200px;
+}
+
+/* Locations */
+
+.locations {
+  background-image: url("/resources/img-locations-background.webp");
+  position: static;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+
+.locations h2 {
+  position: relative;
+  top: 100px;
+}
+
+.location-list {
+  display: flex;
+  height: 600px;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.address {
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  margin: 0 20px;
+  text-align: center;
+}
+
+/* Footer */
+
+footer {
+  background-color: black;
+  text-align: center;
+  width: 100%;
+  height: 200px;
+  bottom: 100px;
+}
+
+.copyright {
+  text-align: left;
+  margin-left: 20px;
 }
